--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/NguyenDucVu_241230896/home_page_style.css">
+    <link rel="shortcut icon" href="assets/images/NguyenDucVu_241230896/" type="image/x-icon">
+    <title>BaiTapLonThietKeWeb</title>
 </head>
-<body>
-    
+<body;">
+    <div class="master-wrapper-page">
+        <div class="header">
+            <div class="higher-header">
+                <div class="header-logo">
+                    <a href=""><img class="header-logo" src="./assets/images/NguyenDucVu_241230896/navbarlogo.png" alt="page logo"></a>
+                </div>
+                <div class="search-box-new store-search-box">
+                    <form action="" id="small-search-box-form"><input type="text" name="" id="small-searchterms" placeholder="Bạn muốn tìm gì..."></form>
+                </div>
+                <div class="login-icon">
+                    <a href="./pages/account.html" >
+                        <img src="./assets/images/NguyenDucVu_241230896/login-icon.png" alt="login icon" id="login-icon-img"> TÀI KHOẢN
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper-page-content"></div>
+        <div class="footer"></div>
+    </div>
 </body>
 </html>
