complete: header-navbar and footer

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/NguyenDucVu_241230896/home_page_style.css">
+    <link rel="stylesheet" href="./styles/NguyenDucVu_241230896/header_and_footer.css">
     <link rel="shortcut icon" href="assets/images/NguyenDucVu_241230896/" type="image/x-icon">
     <title>BaiTapLonThietKeWeb</title>
 </head>
 <body;">
     <div class="master-wrapper-page">
-        <div class="header">
+        <!-- This is begin of header -->
+        <header>
             <div class="higher-header">
                 <div class="header-logo">
                     <a href=""><img class="header-logo" src="./assets/images/NguyenDucVu_241230896/navbarlogo.png" alt="page logo"></a>
@@ -19,13 +20,99 @@
                 </div>
                 <div class="login-icon">
                     <a href="./pages/account.html" >
-                        <img src="./assets/images/NguyenDucVu_241230896/login-icon.png" alt="login icon" id="login-icon-img"> TÀI KHOẢN
+                        <img src="./assets/images/NguyenDucVu_241230896/login-icon.png" alt="login icon" id="login-icon-img"> Tài Khoản
                     </a>
+                    <div class="login-dropdown">
+                        <a href="./pages/login.html">Đăng nhập</a>
+                        <a href="./pages/register.html">Đăng ký</a>
+                    </div>
                 </div>
             </div>
+            <div class="header-navbar-for-desktop">
+                <ul class="top-menu-not-mobile">
+                    <li class="category-menu-items"><a href="">iPhone</a></li>
+                    <li class="category-menu-items"><a href="">iPad</a></li>
+                    <li class="category-menu-items"><a href="">Mac</a></li>
+                    <li class="category-menu-items"><a href="">Watch</a></li>
+                    <li class="category-menu-items"><a href="">Phụ kiện</a></li>
+                    <li class="category-menu-items"><a href="">Âm thanh</a></li>
+                    <li class="category-menu-items"><a href="">Camera</a></li>
+                    <li class="category-menu-items"><a href="">Gia dụng</a></li>
+                    <li class="category-menu-items"><a href="">Tin tức</a></li>
+                </ul>
+            </div>
+        </header>
+        <!-- This is end of header -->
+        <div class="wrapper-page-content">
+            
         </div>
-        <div class="wrapper-page-content"></div>
-        <div class="footer"></div>
+        <!-- this is begin of footer -->
+        <footer>
+                <div class="footer-wrapper">
+        <div class="footer-about">
+            <img src="./assets/images/NguyenDucVu_241230896/navbarlogo.png" alt="ShopDunk Logo" class="footer-logo">
+            <p>
+                Năm 2020, DucVu Team trở thành đại lý ủy quyền của Apple. Chúng tôi phát triển chuỗi cửa hàng tiêu chuẩn
+                và Apple Mono Store nhằm mang đến trải nghiệm tốt nhất về sản phẩm và dịch vụ của Apple cho người dùng Việt Nam.
+            </p>
+            <div class="footer-hotline">
+                <p><strong>Tổng đài hỗ trợ:</strong></p>
+                <p>Mua hàng: <a href="tel:19006626">1234.6789</a> (08:00 - 22:00)</p>
+                <p>Bảo hành: <a href="tel:19008036">0123.1111</a> (08:30 - 20:00)</p>
+            </div>
+        </div>
+
+        <div class="footer-links">
+            <h4>Thông tin</h4>
+            <ul>
+                <li><a href="#">Newsfeed</a></li>
+                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="#">Check IMEI</a></li>
+                <li><a href="#">Phương thức thanh toán</a></li>
+                <li><a href="#">Thuê điểm bán lẻ</a></li>
+                <li><a href="#">Bảo hành và sửa chữa</a></li>
+                <li><a href="#">Tuyển dụng</a></li>
+                <li><a href="#">Đánh giá chất lượng, khiếu nại</a></li>
+                <li><a href="#">Tra cứu hoá đơn điện tử</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-links">
+            <h4>Chính sách</h4>
+            <ul>
+                <li><a href="#">Thu cũ đổi mới</a></li>
+                <li><a href="#">Giao hàng</a></li>
+                <li><a href="#">Giao hàng (ZaloPay)</a></li>
+                <li><a href="#">Huỷ giao dịch</a></li>
+                <li><a href="#">Đổi trả</a></li>
+                <li><a href="#">Bảo hành</a></li>
+                <li><a href="#">Dịch vụ</a></li>
+                <li><a href="#">Giải quyết khiếu nại</a></li>
+                <li><a href="#">Bảo mật thông tin</a></li>
+                <li><a href="#">Hướng dẫn thanh toán qua VNPAY</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-links">
+            <h4>Địa chỉ & Liên hệ</h4>
+            <ul>
+                <li><a href="#">Tài khoản của tôi</a></li>
+                <li><a href="#">Đơn đặt hàng</a></li>
+                <li><a href="#">Tìm Store trên Google Map</a></li>
+                <li><a href="#">Hệ thống cửa hàng</a></li>
+                <li><a href="tel:19006626">Mua hàng: 1900.6626</a></li>
+                <li><a href="tel:0822688668">Doanh nghiệp: 0822.688.668</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <p>© 2024 Nhóm BTL Thiết Kế Web Lớp N06, Trường Đại Học Giao Thông Vận Tải</p>
+        <p>Địa chỉ: Số 3, phường Láng Thượng, quận Đống Đa, Hà Nội, Việt Nam</p>
+        <p>Đại diện nhóm trưởng: Nguyễn Đức Vũ - ĐT: 0333.496.018 | Email: ndv120806@gmail.com</p>
+    </div>
+        </footer>
+        <!-- this is end of footer -->
     </div>
 </body>
 </html>
