complete: header and footer for mobile responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/NguyenDucVu_241230896/header_and_footer.css">
+    <script src="https://kit.fontawesome.com/9e100b4052.js" crossorigin="anonymous"></script>
+    <script src="./js/header_and_footer.js" defer></script>
     <link rel="shortcut icon" href="assets/images/NguyenDucVu_241230896/" type="image/x-icon">
     <title>BaiTapLonThietKeWeb</title>
 </head>
@@ -20,12 +22,32 @@
                 </div>
                 <div class="login-icon">
                     <a href="./pages/account.html" >
-                        <img src="./assets/images/NguyenDucVu_241230896/login-icon.png" alt="login icon" id="login-icon-img"> Tài Khoản
+                        <img src="./assets/images/NguyenDucVu_241230896/login-icon.png" alt="login icon" id="login-icon-img">
                     </a>
-                    <div class="login-dropdown">
+                    <div class="login-dropdown-for-destop">
                         <a href="./pages/login.html">Đăng nhập</a>
                         <a href="./pages/register.html">Đăng ký</a>
                     </div>
+                </div>
+                <div class="menu-for-mobile">
+                    <i class="fa-solid fa-bars menu-btn" style="color: #ffffff;"></i>
+                    <div class="drop-down-menu-for-mobile">
+                        <ul class="menu-mobile">
+                            <li><a href="" class="menu-mobile-link">Trang chủ</a></li>
+                            <li><a href="" class="menu-mobile-link">iPhone</a></li>
+                            <li><a href="" class="menu-mobile-link">iPad</a></li>
+                            <li><a href="" class="menu-mobile-link">Mac</a></li>
+                            <li><a href="" class="menu-mobile-link">Watch</a></li>
+                            <li><a href="" class="menu-mobile-link">Phụ Kiện</a></li>
+                            <li><a href="" class="menu-mobile-link">Âm Thanh</a></li>
+                            <li><a href="" class="menu-mobile-link">Camera</a></li>
+                            <li><a href="" class="menu-mobile-link">Gia Dụng</a></li>
+                            <li><a href="" class="menu-mobile-link">Tin Tức</a></li>
+                            <li><a href="" class="menu-mobile-link">Đăng Nhập</a></li>
+                            <li><a href="" class="menu-mobile-link">Đăng Ký</a></li>
+                        </ul>
+                    </div>
+                    <div class="overlay"></div>
                 </div>
             </div>
             <div class="header-navbar-for-desktop">
@@ -107,7 +129,7 @@
     </div>
 
     <div class="footer-bottom">
-        <p>© 2024 Nhóm BTL Thiết Kế Web Lớp N06, Trường Đại Học Giao Thông Vận Tải</p>
+        <p>© 2025 Nhóm BTL Thiết Kế Web Lớp N06, Trường Đại Học Giao Thông Vận Tải</p>
         <p>Địa chỉ: Số 3, phường Láng Thượng, quận Đống Đa, Hà Nội, Việt Nam</p>
         <p>Đại diện nhóm trưởng: Nguyễn Đức Vũ - ĐT: 0333.496.018 | Email: ndv120806@gmail.com</p>
     </div>
