change: footer format

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="assets/images/NguyenDucVu_241230896/" type="image/x-icon">
     <title>BaiTapLonThietKeWeb</title>
 </head>
-<body;">
+<body>
     <div class="master-wrapper-page">
         <!-- This is begin of header -->
         <header>
@@ -129,10 +129,11 @@
     </div>
 
     <div class="footer-bottom">
-        <p>© 2025 Nhóm BTL Thiết Kế Web Lớp N06, Trường Đại Học Giao Thông Vận Tải</p>
+        <p>© 2025 Nhóm BTL Thiết Kế Web Lớp N06 CNTT4 K65, Trường Đại Học Giao Thông Vận Tải</p>
         <p>Địa chỉ: Số 3, phường Láng Thượng, quận Đống Đa, Hà Nội, Việt Nam</p>
-        <p>Đại diện nhóm trưởng: Nguyễn Đức Vũ - ĐT: 0333.496.018 | Email: ndv120806@gmail.com</p>
-    </div>
+        <p>Đại diện nhóm trưởng: Nguyễn Đức Vũ - ĐT: 0333.496.018</p>
+        <p> Email: ndv120806@gmail.com</p>
+    </div
         </footer>
         <!-- this is end of footer -->
     </div>
