--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <div class="search-box-new store-search-box">
                     <form action="" id="small-search-box-form"><input type="text" name="" id="small-searchterms" placeholder="Bạn muốn tìm gì..."></form>
                 </div>
+                <div class="cart-icon" onclick="alert('Chức năng giỏ hàng chưa ra mắt\nVui lòng quay lại sau!\nChức năng sẽ được hoàn thành trong thời gian sớm nhất!\nXin cảm ơn!')">
+                    <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
                 <div class="login-icon">
                     <a href="./pages/account.html" >
                         <img src="./assets/images/NguyenDucVu_241230896/login-icon.png" alt="login icon" id="login-icon-img">
@@ -63,7 +66,7 @@
                     <li class="category-menu-items"><a href="">Tin tức</a></li>
                 </ul>
             </div>
-        </header>
+        </header>\
         <!-- This is end of header -->
         <div class="wrapper-page-content">
             
