--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/NguyenDucVu_241230896/header_and_footer.css">
+    <link rel="stylesheet" href="./styles/NguyenDucVu_241230896/carousel_banner.css">
     <script src="https://kit.fontawesome.com/9e100b4052.js" crossorigin="anonymous"></script>
     <script src="./js/header_and_footer.js" defer></script>
+    <script src="./js/carousel_banner.js" defer></script>
     <link rel="shortcut icon" href="assets/images/NguyenDucVu_241230896/" type="image/x-icon">
     <title>BaiTapLonThietKeWeb</title>
 </head>
+
 <body>
     <div class="master-wrapper-page">
         <!-- This is begin of header -->
         <header>
             <div class="higher-header">
                 <div class="header-logo">
-                    <a href=""><img class="header-logo" src="./assets/images/NguyenDucVu_241230896/navbarlogo.png" alt="page logo"></a>
+                    <a href=""><img class="header-logo" src="./assets/images/NguyenDucVu_241230896/navbarlogo.png"
+                            alt="page logo"></a>
                 </div>
                 <div class="search-box-new store-search-box">
-                    <form action="" id="small-search-box-form"><input type="text" name="" id="small-searchterms" placeholder="Bạn muốn tìm gì..."></form>
+                    <form action="" id="small-search-box-form"><input type="text" name="" id="small-searchterms"
+                            placeholder="Bạn muốn tìm gì..."></form>
                 </div>
-                <div class="cart-icon" onclick="alert('Chức năng giỏ hàng chưa ra mắt\nVui lòng quay lại sau!\nChức năng sẽ được hoàn thành trong thời gian sớm nhất!\nXin cảm ơn!')">
+                <div class="cart-icon">
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
                 </div>
                 <div class="login-icon">
-                    <a href="./pages/account.html" >
-                        <img src="./assets/images/NguyenDucVu_241230896/login-icon.png" alt="login icon" id="login-icon-img">
+                    <a href="./pages/account.html">
+                        <img src="./assets/images/NguyenDucVu_241230896/login-icon.png" alt="login icon"
+                            id="login-icon-img">
                     </a>
                     <div class="login-dropdown-for-destop">
                         <a href="./pages/login.html">Đăng nhập</a>
@@ -66,79 +73,115 @@
                     <li class="category-menu-items"><a href="">Tin tức</a></li>
                 </ul>
             </div>
-        </header>\
+        </header>
         <!-- This is end of header -->
         <div class="wrapper-page-content">
-            
+            <div class="carousel-container">
+                <div class="carousel-wrapper">
+                    <div id="carousel" class="carousel">
+                        <div id="slides" class="slides">
+                            <a href="https://example.com/ai" target="_blank">
+                                <img src="./assets/images/NguyenDucVu_241230896/Carousel_banner_images/carousel_pic1.png" alt="Khám phá công nghệ AI">
+                            </a>
+                            <a href="https://example.com/web" target="_blank">
+                                <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/thang10_2/banner%20iP17pro-%C4%90C2_PC.png" alt="Tương lai của lập trình web">
+                            </a>
+                            <a href="https://example.com/ui" target="_blank">
+                                <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/thang10_2/banner%20iP17-%C4%90C_PC.png" alt="Thiết kế giao diện tối giản">
+                            </a>
+                            <a href="https://example.com/data" target="_blank">
+                                <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/banner%20iPdsr-T10_PC.png" alt="Phân tích dữ liệu lớn">
+                            </a>
+                            <a href="https://example.com/data" target="_blank">
+                                <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/thang%2010%20_3/banner%20MBsr-T10_PC.png" alt="Phân tích dữ liệu lớn">
+                            </a>
+                            <a href="https://example.com/data" target="_blank">
+                                <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/banner%20Wtsr-T10_PC.png" alt="Phân tích dữ liệu lớn">
+                            </a>
+                            <a href="https://example.com/data" target="_blank">
+                                <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/thang_7/thang7_2/PC.jpg" alt="Phân tích dữ liệu lớn">
+                            </a>
+                        </div>
+
+                        <button id="prev" class="ctrl-btn prev">⟨</button>
+                        <button id="next" class="ctrl-btn next">⟩</button>
+                        <div id="dots" class="dots"></div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- this is begin of footer -->
         <footer>
-                <div class="footer-wrapper">
-        <div class="footer-about">
-            <img src="./assets/images/NguyenDucVu_241230896/navbarlogo.png" alt="ShopDunk Logo" class="footer-logo">
-            <p>
-                Năm 2020, DucVu Team trở thành đại lý ủy quyền của Apple. Chúng tôi phát triển chuỗi cửa hàng tiêu chuẩn
-                và Apple Mono Store nhằm mang đến trải nghiệm tốt nhất về sản phẩm và dịch vụ của Apple cho người dùng Việt Nam.
-            </p>
-            <div class="footer-hotline">
-                <p><strong>Tổng đài hỗ trợ:</strong></p>
-                <p>Mua hàng: <a href="tel:19006626">1234.6789</a> (08:00 - 22:00)</p>
-                <p>Bảo hành: <a href="tel:19008036">0123.1111</a> (08:30 - 20:00)</p>
+            <div class="footer-wrapper">
+                <div class="footer-about">
+                    <img src="./assets/images/NguyenDucVu_241230896/navbarlogo.png" alt="ShopDunk Logo"
+                        class="footer-logo">
+                    <p>
+                        Năm 2020, DucVu Team trở thành đại lý ủy quyền của Apple. Chúng tôi phát triển chuỗi cửa hàng
+                        tiêu chuẩn
+                        và Apple Mono Store nhằm mang đến trải nghiệm tốt nhất về sản phẩm và dịch vụ của Apple cho
+                        người dùng Việt Nam.
+                    </p>
+                    <div class="footer-hotline">
+                        <p><strong>Tổng đài hỗ trợ:</strong></p>
+                        <p>Mua hàng: <a href="tel:19006626">1234.6789</a> (08:00 - 22:00)</p>
+                        <p>Bảo hành: <a href="tel:19008036">0123.1111</a> (08:30 - 20:00)</p>
+                    </div>
+                </div>
+
+                <div class="footer-links">
+                    <h4>Thông tin</h4>
+                    <ul>
+                        <li><a href="#">Newsfeed</a></li>
+                        <li><a href="#">Giới thiệu</a></li>
+                        <li><a href="#">Check IMEI</a></li>
+                        <li><a href="#">Phương thức thanh toán</a></li>
+                        <li><a href="#">Thuê điểm bán lẻ</a></li>
+                        <li><a href="#">Bảo hành và sửa chữa</a></li>
+                        <li><a href="#">Tuyển dụng</a></li>
+                        <li><a href="#">Đánh giá chất lượng, khiếu nại</a></li>
+                        <li><a href="#">Tra cứu hoá đơn điện tử</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-links">
+                    <h4>Chính sách</h4>
+                    <ul>
+                        <li><a href="#">Thu cũ đổi mới</a></li>
+                        <li><a href="#">Giao hàng</a></li>
+                        <li><a href="#">Giao hàng (ZaloPay)</a></li>
+                        <li><a href="#">Huỷ giao dịch</a></li>
+                        <li><a href="#">Đổi trả</a></li>
+                        <li><a href="#">Bảo hành</a></li>
+                        <li><a href="#">Dịch vụ</a></li>
+                        <li><a href="#">Giải quyết khiếu nại</a></li>
+                        <li><a href="#">Bảo mật thông tin</a></li>
+                        <li><a href="#">Hướng dẫn thanh toán qua VNPAY</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-links">
+                    <h4>Địa chỉ & Liên hệ</h4>
+                    <ul>
+                        <li><a href="#">Tài khoản của tôi</a></li>
+                        <li><a href="#">Đơn đặt hàng</a></li>
+                        <li><a href="#">Tìm Store trên Google Map</a></li>
+                        <li><a href="#">Hệ thống cửa hàng</a></li>
+                        <li><a href="tel:19006626">Mua hàng: 1900.6626</a></li>
+                        <li><a href="tel:0822688668">Doanh nghiệp: 0822.688.668</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
 
-        <div class="footer-links">
-            <h4>Thông tin</h4>
-            <ul>
-                <li><a href="#">Newsfeed</a></li>
-                <li><a href="#">Giới thiệu</a></li>
-                <li><a href="#">Check IMEI</a></li>
-                <li><a href="#">Phương thức thanh toán</a></li>
-                <li><a href="#">Thuê điểm bán lẻ</a></li>
-                <li><a href="#">Bảo hành và sửa chữa</a></li>
-                <li><a href="#">Tuyển dụng</a></li>
-                <li><a href="#">Đánh giá chất lượng, khiếu nại</a></li>
-                <li><a href="#">Tra cứu hoá đơn điện tử</a></li>
-            </ul>
-        </div>
-
-        <div class="footer-links">
-            <h4>Chính sách</h4>
-            <ul>
-                <li><a href="#">Thu cũ đổi mới</a></li>
-                <li><a href="#">Giao hàng</a></li>
-                <li><a href="#">Giao hàng (ZaloPay)</a></li>
-                <li><a href="#">Huỷ giao dịch</a></li>
-                <li><a href="#">Đổi trả</a></li>
-                <li><a href="#">Bảo hành</a></li>
-                <li><a href="#">Dịch vụ</a></li>
-                <li><a href="#">Giải quyết khiếu nại</a></li>
-                <li><a href="#">Bảo mật thông tin</a></li>
-                <li><a href="#">Hướng dẫn thanh toán qua VNPAY</a></li>
-            </ul>
-        </div>
-
-        <div class="footer-links">
-            <h4>Địa chỉ & Liên hệ</h4>
-            <ul>
-                <li><a href="#">Tài khoản của tôi</a></li>
-                <li><a href="#">Đơn đặt hàng</a></li>
-                <li><a href="#">Tìm Store trên Google Map</a></li>
-                <li><a href="#">Hệ thống cửa hàng</a></li>
-                <li><a href="tel:19006626">Mua hàng: 1900.6626</a></li>
-                <li><a href="tel:0822688668">Doanh nghiệp: 0822.688.668</a></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="footer-bottom">
-        <p>© 2025 Nhóm BTL Thiết Kế Web Lớp N06 CNTT4 K65, Trường Đại Học Giao Thông Vận Tải</p>
-        <p>Địa chỉ: Số 3, phường Láng Thượng, quận Đống Đa, Hà Nội, Việt Nam</p>
-        <p>Đại diện nhóm trưởng: Nguyễn Đức Vũ - ĐT: 0333.496.018</p>
-        <p> Email: ndv120806@gmail.com</p>
-    </div
+            <div class="footer-bottom">
+                <p>© 2025 Nhóm BTL Thiết Kế Web Lớp N06 CNTT4 K65, Trường Đại Học Giao Thông Vận Tải</p>
+                <p>Địa chỉ: Số 3, phường Láng Thượng, quận Đống Đa, Hà Nội, Việt Nam</p>
+                <p>Đại diện nhóm trưởng: Nguyễn Đức Vũ - ĐT: 0333.496.018</p>
+                <p> Email: ndv120806@gmail.com</p>
+            </div>
         </footer>
         <!-- this is end of footer -->
     </div>
 </body>
+
 </html>
