add: carousel box shadow, margin, responsive

--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
                 <div class="carousel-wrapper">
                     <div id="carousel" class="carousel">
                         <div id="slides" class="slides">
-                            <a href="https://example.com/ai" target="_blank">
+                            <a href="./pages/iPhone.html" target="">
                                 <img src="./assets/images/NguyenDucVu_241230896/Carousel_banner_images/carousel_pic1.png" alt="Khám phá công nghệ AI">
                             </a>
-                            <a href="https://example.com/web" target="_blank">
+                            <a href="./pages/iPhone.html" target="">
                                 <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/thang10_2/banner%20iP17pro-%C4%90C2_PC.png" alt="Tương lai của lập trình web">
                             </a>
-                            <a href="https://example.com/ui" target="_blank">
+                            <a href="./pages/iPhone.html" target="">
                                 <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/thang10_2/banner%20iP17-%C4%90C_PC.png" alt="Thiết kế giao diện tối giản">
                             </a>
-                            <a href="https://example.com/data" target="_blank">
+                            <a href="./pages/iPad.html" target="">
                                 <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/banner%20iPdsr-T10_PC.png" alt="Phân tích dữ liệu lớn">
                             </a>
-                            <a href="https://example.com/data" target="_blank">
+                            <a href="./pages/Mac.html" target="">
                                 <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/thang%2010%20_3/banner%20MBsr-T10_PC.png" alt="Phân tích dữ liệu lớn">
                             </a>
-                            <a href="https://example.com/data" target="_blank">
+                            <a href="./pages/watch.html" target="">
                                 <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/Tha%CC%81ng%2010/banner%20Wtsr-T10_PC.png" alt="Phân tích dữ liệu lớn">
                             </a>
-                            <a href="https://example.com/data" target="_blank">
+                            <a href="./pages/PhuKien.html" target="">
                                 <img src="https://shopdunk.com/images/uploaded/banner/Banner%202025/thang_7/thang7_2/PC.jpg" alt="Phân tích dữ liệu lớn">
                             </a>
                         </div>
@@ -109,6 +109,9 @@
                     </div>
                 </div>
             </div>
+            <!-- Code vao day -->
+             
+            <!-- Ket thuc code -->
         </div>
         <!-- this is begin of footer -->
         <footer>
