--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/NguyenDucVu_241230896/header_and_footer.css">
     <link rel="stylesheet" href="./styles/NguyenDucVu_241230896/carousel_banner.css">
+    <link rel="stylesheet" href="./styles/NguyenDucVu_241230896/main_content.css">
     <script src="https://kit.fontawesome.com/9e100b4052.js" crossorigin="anonymous"></script>
     <script src="./js/header_and_footer.js" defer></script>
     <script src="./js/carousel_banner.js" defer></script>
@@ -19,7 +20,7 @@
         <header>
             <div class="higher-header">
                 <div class="header-logo">
-                    <a href=""><img class="header-logo" src="./assets/images/page_logo.png"
+                    <a href=""><img class="header-logo" src="./assets/images/NguyenDucVu_241230896/header_image/page_logo.png"
                             alt="page logo"></a>
                 </div>
                 <div class="search-box-new store-search-box">
@@ -31,7 +32,7 @@
                 </div>
                 <div class="login-icon">
                     <a href="./pages/account.html">
-                        <img src="./assets/images/NguyenDucVu_241230896/login-icon.png" alt="login icon"
+                        <img src="./assets/images/NguyenDucVu_241230896/header_image/login-icon.png" alt="login icon"
                             id="login-icon-img">
                     </a>
                     <div class="login-dropdown-for-destop">
@@ -110,14 +111,187 @@
                 </div>
             </div>
             <!-- Code vao day -->
-             
+            <div class="page-content">
+                <div class="category-list">
+                    <h2 class="category-title">iPhone mới</h2>
+                    <div class="item-list">
+                        <div class="itembox">
+                            <div class="product-tag">
+                                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="">
+                            </div>
+                            <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/iphone-17-pro-max_cam.png" alt="" class="item-image">
+                            <h3 class="item-name">iPhone 17 Promax</h3>
+                            <p class="item-price">44.449.000 VNĐ</p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                    </div>
+                    <a href="" class="show-all-btn">Xem thêm iPhone</a>
+                </div>
+                <div class="category-list">
+                    <h2 class="category-title"></h2>
+                    <div class="item-list">
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                    </div>
+                    <a href="" class="show-all-btn">Xem thêm iPhone</a>
+                </div>
+                <div class="category-list">
+                    <h2 class="category-title"></h2>
+                    <div class="item-list">
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                    </div>
+                    <a href="" class="show-all-btn">Xem thêm iPhone</a>
+                </div>
+                <div class="category-list">
+                    <h2 class="category-title"></h2>
+                    <div class="item-list">
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                    </div>
+                    <a href="" class="show-all-btn">Xem thêm iPhone</a>
+                </div>
+                <div class="category-list">
+                    <h2 class="category-title"></h2>
+                    <div class="item-list">
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                        <div class="itembox">
+                            <div class="product-tag"></div>
+                            <img src="" alt="" class="item-image">
+                            <h3 class="item-name"></h3>
+                            <p class="item-price"></p>
+                            <a href=""><button>Chi tiết</button></a>
+                        </div>
+                    </div>
+                    <a href="" class="show-all-btn">Xem thêm iPhone</a>
+                </div>
+            </div>    
             <!-- Ket thuc code -->
         </div>
         <!-- this is begin of footer -->
         <footer>
             <div class="footer-wrapper">
                 <div class="footer-about">
-                    <img src="./assets/images/page_logo.png" alt="ShopDunk Logo"
+                    <img src="./assets/images/NguyenDucVu_241230896/header_image/page_logo.png" alt="ShopDunk Logo"
                         class="footer-logo">
                     <p>
                         Năm 2020, DucVu Team trở thành đại lý ủy quyền của Apple. Chúng tôi phát triển chuỗi cửa hàng
