--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                             <li><a href="" class="menu-mobile-link">Camera</a></li>
                             <li><a href="" class="menu-mobile-link">Gia Dụng</a></li>
                             <li><a href="" class="menu-mobile-link">Tin Tức</a></li>
-                            <li><a href="" class="menu-mobile-link">Đăng Nhập</a></li>
-                            <li><a href="" class="menu-mobile-link">Đăng Ký</a></li>
+                            <li><a href="./pages/login.html" class="menu-mobile-link">Đăng Nhập</a></li>
+                            <li><a href="./pages/register.html" class="menu-mobile-link">Đăng Ký</a></li>
                         </ul>
                     </div>
                     <div class="overlay"></div>
@@ -125,31 +125,37 @@
                             <a href=""><button>Chi tiết</button></a>
                         </div>
                         <div class="itembox">
-                            <div class="product-tag"></div>
-                            <img src="" alt="" class="item-image">
-                            <h3 class="item-name"></h3>
-                            <p class="item-price"></p>
+                            <div class="product-tag">
+                                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="">
+                            </div>
+                            <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/iphone-17-pro-max-white.png" alt="" class="item-image">
+                            <h3 class="item-name">iPhone 17 Pro</h3>
+                            <p class="item-price">34.799.000 VNĐ</p>
                             <a href=""><button>Chi tiết</button></a>
                         </div>
                         <div class="itembox">
-                            <div class="product-tag"></div>
-                            <img src="" alt="" class="item-image">
-                            <h3 class="item-name"></h3>
-                            <p class="item-price"></p>
+                            <div class="product-tag">
+                                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="">
+                            </div>
+                            <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/ip17-lavender.png" alt="" class="item-image">
+                            <h3 class="item-name">iPhone 17</h3>
+                            <p class="item-price">24.999.000 VNĐ</p>
                             <a href=""><button>Chi tiết</button></a>
                         </div>
                         <div class="itembox">
-                            <div class="product-tag"></div>
-                            <img src="" alt="" class="item-image">
-                            <h3 class="item-name"></h3>
-                            <p class="item-price"></p>
+                            <div class="product-tag">
+                                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="">
+                            </div>
+                            <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/iphone-air-256gb_240.png" alt="" class="item-image">
+                            <h3 class="item-name">iPhone Air</h3>
+                            <p class="item-price">30.990.000</p>
                             <a href=""><button>Chi tiết</button></a>
                         </div>
                     </div>
                     <a href="" class="show-all-btn">Xem thêm iPhone</a>
                 </div>
                 <div class="category-list">
-                    <h2 class="category-title"></h2>
+                    <h2 class="category-title">iPad mới</h2>
                     <div class="item-list">
                         <div class="itembox">
                             <div class="product-tag"></div>
@@ -180,10 +186,10 @@
                             <a href=""><button>Chi tiết</button></a>
                         </div>
                     </div>
-                    <a href="" class="show-all-btn">Xem thêm iPhone</a>
+                    <a href="" class="show-all-btn">Xem thêm iPad</a>
                 </div>
                 <div class="category-list">
-                    <h2 class="category-title"></h2>
+                    <h2 class="category-title">Mac mới</h2>
                     <div class="item-list">
                         <div class="itembox">
                             <div class="product-tag"></div>
@@ -214,10 +220,10 @@
                             <a href=""><button>Chi tiết</button></a>
                         </div>
                     </div>
-                    <a href="" class="show-all-btn">Xem thêm iPhone</a>
+                    <a href="" class="show-all-btn">Xem thêm Mac</a>
                 </div>
                 <div class="category-list">
-                    <h2 class="category-title"></h2>
+                    <h2 class="category-title">Watch mới</h2>
                     <div class="item-list">
                         <div class="itembox">
                             <div class="product-tag"></div>
@@ -248,41 +254,29 @@
                             <a href=""><button>Chi tiết</button></a>
                         </div>
                     </div>
-                    <a href="" class="show-all-btn">Xem thêm iPhone</a>
+                    <a href="" class="show-all-btn">Xem thêm Watch</a>
                 </div>
-                <div class="category-list">
-                    <h2 class="category-title"></h2>
-                    <div class="item-list">
-                        <div class="itembox">
-                            <div class="product-tag"></div>
-                            <img src="" alt="" class="item-image">
-                            <h3 class="item-name"></h3>
-                            <p class="item-price"></p>
-                            <a href=""><button>Chi tiết</button></a>
+                <img src="assets/images/NguyenDucVu_241230896/page_img/1.jpeg" alt="" class="decor-image">
+                <div class="main-page-newsfeed">
+                    <h2>Newsfeed</h2>
+                    <div class="newsfeed-container">
+                        <div class="newsfeed-card">
+                            <img src="./assets/images/NguyenDucVu_241230896/page_img/0051628_lens-chup-phong-canh-fujifilm (1)_1600.jpeg" alt="" class="decription-img">
+                            <h3 class="newsfeed-title">Những dòng lens chụp phong cảnh Fujifilm dưới 20 triệu đồng đáng mua</h3>
+                            <p class="newsfeed-posted-day">22/10/2025</p>
                         </div>
-                        <div class="itembox">
-                            <div class="product-tag"></div>
-                            <img src="" alt="" class="item-image">
-                            <h3 class="item-name"></h3>
-                            <p class="item-price"></p>
-                            <a href=""><button>Chi tiết</button></a>
+                        <div class="newsfeed-card">
+                            <img src="./assets/images/NguyenDucVu_241230896/page_img/0051627_lens-chan-dung-fujifilm (1)_1600.jpeg" alt="" class="decription-img">
+                            <h3 class="newsfeed-title">Top 3 lens chân dung đáng mua nhất dưới 20 triệu</h3>
+                            <p class="newsfeed-posted-day">22/10/2025</p>
                         </div>
-                        <div class="itembox">
-                            <div class="product-tag"></div>
-                            <img src="" alt="" class="item-image">
-                            <h3 class="item-name"></h3>
-                            <p class="item-price"></p>
-                            <a href=""><button>Chi tiết</button></a>
-                        </div>
-                        <div class="itembox">
-                            <div class="product-tag"></div>
-                            <img src="" alt="" class="item-image">
-                            <h3 class="item-name"></h3>
-                            <p class="item-price"></p>
-                            <a href=""><button>Chi tiết</button></a>
+                        <div class="newsfeed-card">
+                            <img src="./assets/images/NguyenDucVu_241230896/page_img/0051626_xoa-phong-x-a5 (1)_1600.jpeg" alt="" class="decription-img">
+                            <h3 class="newsfeed-title">Cách chụp ảnh xóa phông xa đẹp tự nhiên</h3>
+                            <p class="newsfeed-posted-day">22/10/2025</p>
                         </div>
                     </div>
-                    <a href="" class="show-all-btn">Xem thêm iPhone</a>
+                    <a href="" class="newsfeed-link">Xem thêm tin tức ></a>
                 </div>
             </div>    
             <!-- Ket thuc code -->
