fix: register page

--- a/pages/register.html
+++ b/pages/register.html
@@ -110,7 +110,7 @@
                                 <div class="form-field" id="check-box-register">
                                     <input type="checkbox" name="agree" id="agree" required> <p>Tôi đã đồng ý với <span><a href="" class="account-link">chính sách</a></span> và <span><a href="" class="account-link">điều khoản</a></span> của cửa hàng</p>
                                 </div>
-                                <button type="submit">Đăng nhập</button>
+                                <button type="submit">Đăng ký</button>
                             </form>
                             <p>Bạn đã có tài khoản? <a href="./login.html" class="account-link">Đăng nhập ngay</a></p>
                         </div>
