thay doi ten thu muc watch.css thanh product.css

--- a/pages/watch.html
+++ b/pages/watch.html
@@ -155,7 +155,7 @@
         <!-- Code vao day -->
         <main>
           <!-- san pham -->
-          <div class="list-watch">
+          <div class="list-product">
             <ul id="filter-list">
               <li><a href="#" data-series="all">Tất cả</a></li>
               <li>
