feat(pages): new product page

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/iphone-17-pro-max_cam.png" alt="" class="item-image">
                             <h3 class="item-name">iPhone 17 Promax</h3>
                             <p class="item-price">44.449.000 VNĐ</p>
-                            <a href=""><button>Chi tiết</button></a>
+                            <a href="./pages/product.html?id=iphone17-promax"><button>Chi tiết</button></a>
                         </div>
                         <div class="itembox">
                             <div class="product-tag">
@@ -137,7 +137,7 @@
                             <div class="product-tag">
                                 <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="">
                             </div>
-                            <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/ip17-lavender.png" alt="" class="item-image">
+                            <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/ip17-trang.png" alt="" class="item-image">
                             <h3 class="item-name">iPhone 17</h3>
                             <p class="item-price">24.999.000 VNĐ</p>
                             <a href=""><button>Chi tiết</button></a>
@@ -146,7 +146,7 @@
                             <div class="product-tag">
                                 <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="">
                             </div>
-                            <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/iphone-air-256gb_240.png" alt="" class="item-image">
+                            <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/iphone-air-tim.png" alt="" class="item-image">
                             <h3 class="item-name">iPhone Air</h3>
                             <p class="item-price">30.990.000</p>
                             <a href=""><button>Chi tiết</button></a>
