--- a/pages/product.html
+++ b/pages/product.html
@@ -6,20 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/header_and_footer.css">
     <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/main_content.css">
+    <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/product.css">
     <script src="https://kit.fontawesome.com/9e100b4052.js" crossorigin="anonymous"></script>
     <script src="../js/header_and_footer.js" defer></script>
+    <script src="../js/product.js"></script>
     <link rel="shortcut icon" href="../assets/images/NguyenDucVu_241230896/account.css" type="image/x-icon">
     <title>BaiTapLonThietKeWeb</title>
 </head>
 
 <body>
-    <div class="master-wrapper-page-login-and-register">
+    <div class="master-wrapper-page">
         <!-- This is begin of header -->
         <header>
             <div class="higher-header">
                 <div class="header-logo">
-                    <a href="../index.html"><img class="header-logo" src="../assets/images/NguyenDucVu_241230896/header_image/page_logo.png"
-                            alt="page logo"></a>
+                    <a href="../index.html"><img class="header-logo"
+                            src="../assets/images/NguyenDucVu_241230896/header_image/page_logo.png" alt="page logo"></a>
                 </div>
                 <div class="search-box-new store-search-box">
                     <form action="" id="small-search-box-form"><input type="text" name="" id="small-searchterms"
@@ -77,7 +79,92 @@
         <div class="wrapper-page-content">
             <!-- Code vao day -->
             <div class="page-content">
-            </div>    
+                <div class="product-container">
+                    <div class="product-gallery">
+                        <img id="main-image"
+                            src="../assets/images/NguyenDucVu_241230896/product_image/iPhone_image/iphone-17-pro-max_cam.png"
+                            alt="Hình ảnh sản phẩm chính">
+                    </div>
+
+                    <div class="product-info">
+                        <h1 id="product-name">iPhone 17 ProMax</h1>
+                        <div class="price-section">
+                            <span id="product-price" class="current-price">47.799.000</span>
+                            <span id="product-old-price" class="old-price">50.999.000</span>
+                        </div>
+                        <div class="options-section">
+                            <strong>Dung lượng:</strong>
+                            <div id="storage-options" class="options-group">
+                                <button class="storage-button active">256GB</button>
+                                <button class="storage-button">512GB</button>
+                                <button class="storage-button">1TB</button>
+                            </div>
+                        </div>
+                        <div class="options-section">
+                            <strong>Màu sắc:</strong>
+                            <div id="color-options" class="options-group">
+                                <button class="color-swatch" style="background-color: #3b3b3c;" title="Đen Titan">
+                                </button>
+
+                                <button class="color-swatch active" style="background-color: #4a5c7a;"
+                                    title="Xanh Titan">
+                                </button>
+
+                                <button class="color-swatch" style="background-color: #f0f0f0;" title="Trắng Titan">
+                                </button>
+                            </div>
+                        </div>
+                        <button class="buy-button">MUA NGAY</button>
+                        <button class="credit-button">MUA TRẢ GÓP</button>
+                        <ul class="policy-list">
+                            <li>
+                                <span class="icon-check"></span>
+                                <span>Bộ sản phẩm gồm: Hộp, Sách hướng dẫn, Cây lấy sim, Cáp Type C</span>
+                            </li>
+                            <li>
+                                <span class="icon-check"></span>
+                                <span>Miễn phí 1 đổi 1 trong 30 ngày đầu tiên (nếu có lỗi do NSX)</span>
+                            </li>
+                            <li>
+                                <span class="icon-check"></span>
+                                <span>Bảo hành chính hãng 1 năm <a href="#">(chi tiết)</a></span>
+                            </li>
+                            <li>
+                                <span class="icon-check"></span>
+                                <span>Giao hàng nhanh toàn quốc <a href="#">(chi tiết)</a></span>
+                            </li>
+                            <li>
+                                <span class="icon-check"></span>
+                                <span>Tax Refund For Foreingers<a href="#">(detail)</a></span>
+                            </li>
+                        </ul>
+                    </div>
+            </div>
+                <div class="comment-section">
+                    <h2>Bình luận</h2>
+                    <hr>
+                    <div class="cmt">
+                        <form action="" class="comment-form" id="comment-form">
+                        <h3>Viết bình luận của bạn</h3>
+                        <div class="comment-field">
+                            <label for="username">Tên người dùng</label>
+                            <input type="text" id="username" required>
+                        </div>
+                        <div class="comment-field">
+                            <label for="email-or-phonenum">Email | SĐT</label>
+                            <input type="text" id="email-or-phonenum" required>
+                        </div>
+                        <div class="comment-field">
+                            <label for="comment">Bình Luận</label>
+                            <textarea name="comment" id="comment" required></textarea>
+                        </div>
+                        <button type="submit" id="submit-comnt-btn">Gửi</button>
+                    </form>
+                    <div class="other-comment">
+                    </div>
+                    </div>
+                </div>
+        </div>
             <!-- Ket thuc code -->
         </div>
         <!-- this is begin of footer -->
