--- a/pages/watch.html
+++ b/pages/watch.html
@@ -79,9 +79,9 @@
               <ul class="menu-mobile">
                 <li><a href="" class="menu-mobile-link">Trang chủ</a></li>
                 <li><a href="" class="menu-mobile-link">iPhone</a></li>
-                <li><a href="" class="menu-mobile-link">iPad</a></li>
+                <li><a href="iPad.html" class="menu-mobile-link">iPad</a></li>
                 <li><a href="" class="menu-mobile-link">Mac</a></li>
-                <li><a href="" class="menu-mobile-link">Watch</a></li>
+                <li><a href="watch.html" class="menu-mobile-link">Watch</a></li>
                 <li><a href="" class="menu-mobile-link">Phụ Kiện</a></li>
                 <li><a href="" class="menu-mobile-link">Âm Thanh</a></li>
                 <li><a href="" class="menu-mobile-link">Camera</a></li>
@@ -97,9 +97,9 @@
         <div class="header-navbar-for-desktop">
           <ul class="top-menu-not-mobile">
             <li class="category-menu-items"><a href="">iPhone</a></li>
-            <li class="category-menu-items"><a href="">iPad</a></li>
+            <li class="category-menu-items"><a href="iPad.html">iPad</a></li>
             <li class="category-menu-items"><a href="">Mac</a></li>
-            <li class="category-menu-items"><a href="">Watch</a></li>
+            <li class="category-menu-items"><a href="watch.html">Watch</a></li>
             <li class="category-menu-items"><a href="">Phụ kiện</a></li>
             <li class="category-menu-items"><a href="">Âm thanh</a></li>
             <li class="category-menu-items"><a href="">Camera</a></li>
