--- a/pages/iPad.html
+++ b/pages/iPad.html
@@ -944,13 +944,15 @@
                   đầy đủ sản phẩm.
                 </p>
 
-                Tại ShopDunk luôn có mức giá tốt nhất cho người dùng cùng với
-                nhiều chương trình hấp dẫn diễn ra liên tục trong tháng. Hãy đến
-                với chúng tôi và trải nghiệm ngay những mẫu
-                <a href="iPad.html?filter=all" class="links">sản phẩm iPad</a>
-                mới nhất với đội ngũ chuyên viên tư vấn được đào tạo bài bản từ
-                Apple, sẵn sàng hỗ trợ bạn về sản phẩm, kỹ thuật hay các công
-                nghệ mới nhất từ Apple.
+                <p>
+                  Tại ShopDunk luôn có mức giá tốt nhất cho người dùng cùng với
+                  nhiều chương trình hấp dẫn diễn ra liên tục trong tháng. Hãy
+                  đến với chúng tôi và trải nghiệm ngay những mẫu
+                  <a href="iPad.html?filter=all" class="links">sản phẩm iPad</a>
+                  mới nhất với đội ngũ chuyên viên tư vấn được đào tạo bài bản
+                  từ Apple, sẵn sàng hỗ trợ bạn về sản phẩm, kỹ thuật hay các
+                  công nghệ mới nhất từ Apple.
+                </p>
               </div>
             </div>
           </div>
