add Mac.html and phu_kien.html

--- a/pages/iPad.html
+++ b/pages/iPad.html
@@ -80,9 +80,11 @@
                 <li><a href="" class="menu-mobile-link">Trang chủ</a></li>
                 <li><a href="" class="menu-mobile-link">iPhone</a></li>
                 <li><a href="iPad.html" class="menu-mobile-link">iPad</a></li>
-                <li><a href="" class="menu-mobile-link">Mac</a></li>
+                <li><a href="Mac.html" class="menu-mobile-link">Mac</a></li>
                 <li><a href="watch.html" class="menu-mobile-link">Watch</a></li>
-                <li><a href="" class="menu-mobile-link">Phụ Kiện</a></li>
+                <li>
+                  <a href="phu_kien.html" class="menu-mobile-link">Phụ Kiện</a>
+                </li>
                 <li><a href="" class="menu-mobile-link">Âm Thanh</a></li>
                 <li><a href="" class="menu-mobile-link">Camera</a></li>
                 <li><a href="" class="menu-mobile-link">Gia Dụng</a></li>
@@ -106,9 +108,11 @@
           <ul class="top-menu-not-mobile">
             <li class="category-menu-items"><a href="">iPhone</a></li>
             <li class="category-menu-items"><a href="iPad.html">iPad</a></li>
-            <li class="category-menu-items"><a href="">Mac</a></li>
+            <li class="category-menu-items"><a href="Mac.html">Mac</a></li>
             <li class="category-menu-items"><a href="watch.html">Watch</a></li>
-            <li class="category-menu-items"><a href="">Phụ kiện</a></li>
+            <li class="category-menu-items">
+              <a href="phu_kien.html">Phụ kiện</a>
+            </li>
             <li class="category-menu-items"><a href="">Âm thanh</a></li>
             <li class="category-menu-items"><a href="">Camera</a></li>
             <li class="category-menu-items"><a href="">Gia dụng</a></li>
@@ -181,7 +185,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -210,7 +214,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -239,7 +243,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -268,7 +272,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -297,7 +301,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad (A16)/0035754_ipad-a16-11-inch-wi-fi_240.png"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_(A16)/0035754_ipad-a16-11-inch-wi-fi_240.png"
                       alt=""
                     />
                   </div>
@@ -324,7 +328,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad (A16)/0035754_ipad-a16-11-inch-wi-fi_240.png"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_(A16)/0035754_ipad-a16-11-inch-wi-fi_240.png"
                       alt=""
                     />
                   </div>
@@ -348,7 +352,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad Air (M3)/0035054_ipad-air-m3-11-inch-wi-fi_240.png"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M3)/0035054_ipad-air-m3-11-inch-wi-fi_240.png"
                       alt=""
                     />
                   </div>
@@ -375,7 +379,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad Air (M3)/0035136_ipad-air-m3-13-inch-wi-fi_240.png"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M3)/0035136_ipad-air-m3-13-inch-wi-fi_240.png"
                       alt=""
                     />
                   </div>
@@ -402,7 +406,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad Air (M3)/0035342_ipad-air-m3-11-inch-wi-fi-cellular_240.png"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M3)/0035342_ipad-air-m3-11-inch-wi-fi-cellular_240.png"
                       alt=""
                     />
                   </div>
@@ -426,7 +430,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad Air (M3)/0035752_ipad-air-m3-13-inch-wi-fi-cellular_240.png"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M3)/0035752_ipad-air-m3-13-inch-wi-fi-cellular_240.png"
                       alt=""
                     />
                   </div>
@@ -455,7 +459,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad Air (M2)/0025628_ipad-air-6-m2-11-inch-wi-fi_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M2)/0025628_ipad-air-6-m2-11-inch-wi-fi_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -482,7 +486,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad Air (M2)/0025629_ipad-air-6-m2-11-inch-wi-fi-cellular_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M2)/0025629_ipad-air-6-m2-11-inch-wi-fi-cellular_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -511,7 +515,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad Air (m2)/0025631_ipad-air-m2-13-inch-wi-fi-cellular_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (m2)/0025631_ipad-air-m2-13-inch-wi-fi-cellular_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -538,7 +542,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad Air (m2)/0025631_ipad-air-m2-13-inch-wi-fi-cellular_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (m2)/0025631_ipad-air-m2-13-inch-wi-fi-cellular_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -567,7 +571,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad mini/0030994_ipad-mini-a17-pro-wi-fi-128gb_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_mini/0030994_ipad-mini-a17-pro-wi-fi-128gb_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -594,7 +598,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad mini/0000593_ipad-mini-6_240.png"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_mini/0000593_ipad-mini-6_240.png"
                       alt=""
                     />
                   </div>
@@ -616,7 +620,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad mini/0031838_ipad-mini-a17-pro-wi-fi-cellular-128gb_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_mini/0031838_ipad-mini-a17-pro-wi-fi-cellular-128gb_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -640,7 +644,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad pro (M4)/0025624_ipad-pro-m4-11-inch-wi-fi_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro_(M4)/0025624_ipad-pro-m4-11-inch-wi-fi_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -667,7 +671,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad pro (M4)/0025624_ipad-pro-m4-11-inch-wi-fi_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro_(M4)/0025624_ipad-pro-m4-11-inch-wi-fi_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -696,7 +700,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad pro (M4)/0025626_ipad-pro-m4-13-inch-wi-fi-cellular_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro_(M4)/0025626_ipad-pro-m4-13-inch-wi-fi-cellular_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -725,7 +729,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad pro (M4)/0025626_ipad-pro-m4-13-inch-wi-fi-cellular_240.jpeg"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro_(M4)/0025626_ipad-pro-m4-13-inch-wi-fi-cellular_240.jpeg"
                       alt=""
                     />
                   </div>
@@ -752,7 +756,7 @@
                 <a href="">
                   <div class="product-image">
                     <img
-                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad gen 10/0009725_ipad-gen-10-th-109-inch-wifi-64gb_240.png"
+                      src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_gen_10/0009725_ipad-gen-10-th-109-inch-wifi-64gb_240.png"
                       alt=""
                     />
                   </div>
