--- a/pages/watch.html
+++ b/pages/watch.html
@@ -80,9 +80,11 @@
                 <li><a href="" class="menu-mobile-link">Trang chủ</a></li>
                 <li><a href="" class="menu-mobile-link">iPhone</a></li>
                 <li><a href="iPad.html" class="menu-mobile-link">iPad</a></li>
-                <li><a href="" class="menu-mobile-link">Mac</a></li>
+                <li><a href="Mac.html" class="menu-mobile-link">Mac</a></li>
                 <li><a href="watch.html" class="menu-mobile-link">Watch</a></li>
-                <li><a href="" class="menu-mobile-link">Phụ Kiện</a></li>
+                <li>
+                  <a href="phu_kien.html" class="menu-mobile-link">Phụ Kiện</a>
+                </li>
                 <li><a href="" class="menu-mobile-link">Âm Thanh</a></li>
                 <li><a href="" class="menu-mobile-link">Camera</a></li>
                 <li><a href="" class="menu-mobile-link">Gia Dụng</a></li>
@@ -98,9 +100,11 @@
           <ul class="top-menu-not-mobile">
             <li class="category-menu-items"><a href="">iPhone</a></li>
             <li class="category-menu-items"><a href="iPad.html">iPad</a></li>
-            <li class="category-menu-items"><a href="">Mac</a></li>
+            <li class="category-menu-items"><a href="Mac.html">Mac</a></li>
             <li class="category-menu-items"><a href="watch.html">Watch</a></li>
-            <li class="category-menu-items"><a href="">Phụ kiện</a></li>
+            <li class="category-menu-items">
+              <a href="phu_kien.html">Phụ kiện</a>
+            </li>
             <li class="category-menu-items"><a href="">Âm thanh</a></li>
             <li class="category-menu-items"><a href="">Camera</a></li>
             <li class="category-menu-items"><a href="">Gia dụng</a></li>
